--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -694,7 +694,14 @@
 				<label class = 'admin' for = "citation">Citation: <input type = "text" id = "citation" name = "citation" size = "50"><br />
 				<label class = 'admin' for = "currentnum">Current Number of People: <input type = "text" id = "currentnum" name = "currentnum" size = "50"><br />
 				<label class = 'admin' for = "currentnum">Maximum Number of People: <input type = "text" id = "maxnum" name = "maxnum" size = "50"><br />
+				<label class = 'admin' for = 'authors'>Add Author: <br />
+				<select id='peopleselect' onchange='loadPeople();'>
+				</select><br />
+				<label class = 'admin' for = 'authors'>Remove Author: <br />
+				<select id='' onchange=''>
+				</select><br />
 				<label class = 'admin' for = "updatebutton">Update Paper: <button id="updatebutton" type="button" onclick="updatePaper();">Update</button>
+				
             </fieldset>
         </form>
 		<form class="modal-forms">
@@ -706,11 +713,6 @@
 				<label class = 'admin' for = "currentnum2">Current Number of People: <input type = "text" id = "currentnum2" name = "currentnum2" size = "50"><br />
 				<label class = 'admin' for = "currentnum2">Maximum Number of People: <input type = "text" id = "maxnum2" name = "maxnum2" size = "50"><br />
 				<label class = 'admin' for = "addbutton">Add Paper: <button id="addbutton" type="button" onclick="addPaper();">Add</button>
-				<select id='peopleselect' onchange='loadPeople();'>
-				</select><br />
-				<label class = 'admin' for = 'authors'>Remove Author: <br />
-				<select id='' onchange=''>
-				</select><br />
             </fieldset>
         </form>
 		<form class="modal-forms">
