Removed random ass plusses

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -329,11 +329,11 @@
 						"<select id='removepeopleselect' onchange='loadAuthors();'>"+
 						"</select><br />"+
 						"<label class = 'admin' for = 'keywords'>Add Keyword: <br />"+
-+						"<select id='keywordselect' onchange='loadKeywords();'>"+
-+						"</select>"+
-+						"<label class = 'admin' for = 'keywords'>Remove Keyword: <br />"+
-+						"<select id='removekeywordselect' onchange='loadPaperKeywords();'>"+
-+						"</select><br />"+
+						"<select id='keywordselect' onchange='loadKeywords();'>"+
+						"</select>"+
+						"<label class = 'admin' for = 'keywords'>Remove Keyword: <br />"+
+						"<select id='removekeywordselect' onchange='loadPaperKeywords();'>"+
+						"</select><br />"+
 						"<label class = 'admin' for = 'updatebutton'>Update Paper: <button id='updatebutton' type='button' onclick='updatePaper();'>Update</button>"+
 					"</fieldset>"+
 				"</form>"+
@@ -914,11 +914,11 @@
 				<select id='' onchange=''>
 				</select><br />
 				<label class = 'admin' for = 'keywords'>Add Keyword: <br />
-+				<select id='keywordselect' onchange='loadKeywords();'>
-+				</select>
-+				<label class = 'admin' for = 'keywords'>Remove Keyword: <br />
-+				<select id='removekeywordselect' onchange='loadPaperKeywords();'>
-+				</select><br />
+				<select id='keywordselect' onchange='loadKeywords();'>
+				</select>
+				<label class = 'admin' for = 'keywords'>Remove Keyword: <br />
+				<select id='removekeywordselect' onchange='loadPaperKeywords();'>
+				</select><br />
 				<label class = 'admin' for = "updatebutton">Update Paper: <button id="updatebutton" type="button" onclick="updatePaper();">Update</button>
 				
             </fieldset>
