--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -644,7 +644,7 @@
 							var optEle = document.createElement('option');
 							var val = keywordID;
 							optEle.setAttribute('value', val);
-							optEle.appendChild(document.createTextNode(element.keyword);
+							optEle.appendChild(document.createTextNode(element.keyword));
 							document.getElementById("removekeywordselect").appendChild(optEle);
 							
 							
@@ -911,11 +911,11 @@
 				<select id='peopleselect' onchange='loadPeople();'>
 				</select><br />
 				<label class = 'admin' for = 'authors'>Remove Author: <br />
-				<select id='' onchange=''>
+				<select id='removepeopleselect' onchange='loadAuthors();'>
 				</select><br />
 				<label class = 'admin' for = 'keywords'>Add Keyword: <br />
 				<select id='keywordselect' onchange='loadKeywords();'>
-				</select>
+				</select><br />
 				<label class = 'admin' for = 'keywords'>Remove Keyword: <br />
 				<select id='removekeywordselect' onchange='loadPaperKeywords();'>
 				</select><br />
