--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -96,7 +96,7 @@
 			top:0; 
 			right:0;
 		}
-		#paperspanel, #peoplepanel, #keywordspanel{
+		#papers-panel, #people-panel, #keywords-panel{
 +			padding-left: 5pt;
 +		}
 	</style>
@@ -679,6 +679,12 @@
 						
 						$.each(data,function(index,element)
 						{
+							//fill add select menu
+							var optEle = document.createElement('option');
+							var val = element.keyword_id;
+							optEle.setAttribute('value', val);
+							optEle.appendChild(document.createTextNode(element.keyword));
+							document.getElementById("keywordselect").appendChild(optEle);
 							//fill delete select menu
 							var optEle = document.createElement('option');
 							var val = element.keyword_id;
