--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -309,7 +309,7 @@
 			
 			loadPapers(true);
 			loadPeople(true);
-			loadKeyword(true);
+			loadKeywords(true);
 			
 			$("#papers-button").click(function(){
 				$("#papers-panel").html("<form class='modal-forms'>"+
