--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -324,13 +324,13 @@
 						"<label class = 'admin' for = 'currentnum'>Maximum Number of People: <input type = 'text' id = 'maxnum' name = 'maxnum' size = '50'><br />"+
 						"<label class = 'admin' for = 'authors'>Add Author: <br />"+
 						"<select id='peopleselect' onchange='loadPeople();'>"+
-						"</select>"+
+						"</select><br />"+
 						"<label class = 'admin' for = 'authors'>Remove Author: <br />"+
 						"<select id='removepeopleselect' onchange='loadAuthors();'>"+
 						"</select><br />"+
 						"<label class = 'admin' for = 'keywords'>Add Keyword: <br />"+
 						"<select id='keywordselect' onchange='loadKeywords();'>"+
-						"</select>"+
+						"</select><br />"+
 						"<label class = 'admin' for = 'keywords'>Remove Keyword: <br />"+
 						"<select id='removekeywordselect' onchange='loadPaperKeywords();'>"+
 						"</select><br />"+
